# typora-themes

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .releaserc.json  README.md
.github/: labeler.yml
.github/workflows/: pull-request.yml  semantic-release.yml
catppuccin/: README.md  catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css
catppuccin/tools/: generate.py  palette.json  template.css
kanagawa/: README.md  fonts  kanagawa-dragon.css  kanagawa-lotus.css  kanagawa-wave.css
rosé-pine/: README.md  fonts  rose-pine-dawn.css  rose-pine-moon.css  rose-pine.css
scripts/: README.md  sync.sh
tools/: README.md  pyproject.toml
tools/src/typora_themes/: __init__.py  __main__.py  build.py  cli.py  colors.py  template.css  typed.py
tools/src/typora_themes/palettes/: kanagawa.json  rose-pine.json
tools/src/typora_themes/themes/: __init__.py  catppuccin.py  kanagawa.py  rose_pine.py
