[project]
name = "typora-themes"
version = "0.1.0"
description = "Generate Typora themes from upstream color palettes"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = []

[project.scripts]
build-themes = "typora_themes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# template.css and palettes/*.json live inside the package: they are inputs the
# build reads at runtime via importlib.resources, not just repo files.
packages = ["src/typora_themes"]
